[package]
name = "testmaker_rust"
version = "0.1.0"
authors = ["ke-ta <banira0428@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version ="1.0.104", features = ["derive"] }
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
rocket = "0.4"
rocket_contrib = { version = "0.4", features = ["json"] }